sparrow-engine/sparrow-engine-cpu/sparrow_engine.h

/**
 * Opaque engine handle. Consumers must not inspect or dereference.
 */
typedef void SparrowEngine;
/**
 * Opaque model handle. Consumers must not inspect or dereference.
 */
typedef void SparrowEngineModel;
/**
 * Single detection result. `label` pointer valid until `sparrow_engine_detections_free()`.
 */
typedef struct SparrowEngineDetection {
  struct SparrowEngineBBox bbox;
  const char *label;
  uint32_t label_id;
  float confidence;
} SparrowEngineDetection;
/**
 * Detection result set from a single `sparrow_engine_detect()` / `sparrow_engine_detect_raw()` call.
 */
typedef struct SparrowEngineDetections {
  const struct SparrowEngineDetection *data;
  uintptr_t len;
  uint32_t image_width;
  uint32_t image_height;
} SparrowEngineDetections;
/**
 * Detection inference options. Zero = use default.
 */
typedef struct SparrowEngineDetectOpts {
  float confidence_threshold;
  uint32_t max_detections;
} SparrowEngineDetectOpts;
/**
 * Pixel format code for raw image buffers.
 *
 * Valid values are 0 = RGB, 1 = RGBA, 2 = BGRA, 3 = BGR.
 */
typedef uint32_t SparrowEnginePixelFormat;
/**
 * Single classification prediction.
 */
typedef struct SparrowEngineClassification {
  const char *label;
  uint32_t label_id;
  float confidence;
} SparrowEngineClassification;
/**
 * Classification result from a single `sparrow_engine_classify()` call.
 */
typedef struct SparrowEngineClassifyResult {
  const char *label;
  uint32_t label_id;
  float confidence;
  const struct SparrowEngineClassification *top_results;
  uintptr_t top_results_len;
  uint32_t image_width;
  uint32_t image_height;
  float processing_time_ms;
} SparrowEngineClassifyResult;
/**
 * Classification inference options. Zero = use default.
 */
typedef struct SparrowEngineClassifyOpts {
  uint32_t top_k;
} SparrowEngineClassifyOpts;
/**
 * A pipeline detection: detection + optional classification.
 */
typedef struct SparrowEnginePipelineDetection {
  struct SparrowEngineDetection detection;
  bool has_classification;
  struct SparrowEngineClassification classification;
} SparrowEnginePipelineDetection;
/**
 * Pipeline result from `sparrow_engine_run_pipeline()`.
 */
typedef struct SparrowEnginePipelineResult {
  const char *pipeline_id;
  const struct SparrowEnginePipelineDetection *data;
  uintptr_t len;
  uint32_t image_width;
  uint32_t image_height;
  float processing_time_ms;
} SparrowEnginePipelineResult;
/**
 * A single detected audio segment.
 */
typedef struct SparrowEngineAudioSegment {
  float start_time_s;
  float end_time_s;
  float confidence;
} SparrowEngineAudioSegment;
/**
 * Audio detection result from `sparrow_engine_detect_audio`.
 */
typedef struct SparrowEngineAudioResult {
  const struct SparrowEngineAudioSegment *data;
  uintptr_t len;
  float duration_s;
  uint32_t sample_rate;
  float processing_time_ms;
} SparrowEngineAudioResult;
/**
 * Audio detection options. Zero = use manifest default.
 */
typedef struct SparrowEngineAudioDetectOpts {
  float confidence_threshold;
  float segment_duration_s;
  float segment_stride_s;
} SparrowEngineAudioDetectOpts;
/**
 * Load a model from a TOML manifest file path. Returns null on error.
 *
 * # Safety
 * - `engine` must be a valid engine pointer.
 * - `manifest_path` must be a valid, non-null, null-terminated UTF-8 string.
 */
SparrowEngineModel *sparrow_engine_load_model(SparrowEngine *engine, const char *manifest_path);
/**
 * Load a model by its ID from the model directory. Returns null on error.
 *
 * Idempotent / lazy: if the model is already loaded, returns a fresh handle
 * to the existing ORT session (no re-creation). Mirrors the lazy-load
 * contract exposed by the HTTP `/v1/models/load` and `/v1/detect`+`/v1/classify`+
 * `/v1/audio` endpoints and the `sparrow-engine-python` package — calling twice with
 * the same id does not invalidate previously-issued handles.
 *
 * # Safety
 * - `engine` must be a valid engine pointer.
 * - `model_id` must be a valid, non-null, null-terminated UTF-8 string.
 */
SparrowEngineModel *sparrow_engine_load_model_by_id(SparrowEngine *engine, const char *model_id);
/**
 * Unload a model and free its resources.
 *
 * # Safety
 * `model` must be a pointer returned by `sparrow_engine_load_model` / `sparrow_engine_load_model_by_id`, or null.
 */
void sparrow_engine_unload_model(SparrowEngineModel *model);
/**
 * Load a pipeline from a TOML manifest. Returns 0 on success, -1 on error.
 *
 * # Safety
 * - `engine` must be a valid engine pointer.
 * - `manifest_path` must be a valid, non-null, null-terminated UTF-8 string.
 */
int32_t sparrow_engine_load_pipeline(SparrowEngine *engine, const char *manifest_path);
/**
 * Load a pipeline by its ID from the model directory. Returns 0 on success, -1 on error.
 *
 * # Safety
 * - `engine` must be a valid engine pointer.
 * - `pipeline_id` must be a valid, non-null, null-terminated UTF-8 string.
 */
int32_t sparrow_engine_load_pipeline_by_id(SparrowEngine *engine, const char *pipeline_id);
/**
 * Unload a pipeline by ID. Returns 0 on success, -1 on error.
 *
 * # Safety
 * - `engine` must be a valid engine pointer.
 * - `pipeline_id` must be a valid, non-null, null-terminated UTF-8 string.
 */
int32_t sparrow_engine_unload_pipeline(SparrowEngine *engine, const char *pipeline_id);
/**
 * Run detection on an encoded image buffer (JPEG/PNG). Returns null on error.
 *
 * # Safety
 * - `model` must be a valid model pointer.
 * - `image` must point to `len` bytes of encoded image data.
 * - `opts` may be null (use defaults).
 */
struct SparrowEngineDetections *sparrow_engine_detect(const SparrowEngineModel *model,
                                                      const uint8_t *image,
                                                      uintptr_t len,
                                                      const struct SparrowEngineDetectOpts *opts);
/**
 * Run detection on a raw pixel buffer. Returns null on error.
 *
 * # Safety
 * - `model` must be a valid model pointer.
 * - `pixels` must point to `h * stride` bytes of pixel data.
 * - `opts` may be null (use defaults).
 */
struct SparrowEngineDetections *sparrow_engine_detect_raw(const SparrowEngineModel *model,
                                                          const uint8_t *pixels,
                                                          uint32_t w,
                                                          uint32_t h,
                                                          uint32_t stride,
                                                          SparrowEnginePixelFormat format,
                                                          const struct SparrowEngineDetectOpts *opts);
/**
 * Run classification on an encoded image buffer (JPEG/PNG). Returns null on error.
 *
 * # Safety
 * - `model` must be a valid model pointer.
 * - `image` must point to `len` bytes of encoded image data.
 * - `opts` may be null (use defaults).
 */
struct SparrowEngineClassifyResult *sparrow_engine_classify(const SparrowEngineModel *model,
                                                            const uint8_t *image,
                                                            uintptr_t len,
                                                            const struct SparrowEngineClassifyOpts *opts);
/**
 * Run a pipeline (detect → classify) on an encoded image. Returns null on error.
 *
 * # Safety
 * - `engine` must be a valid engine pointer.
 * - `pipeline_id` must be a valid, non-null, null-terminated UTF-8 string.
 * - `image` must point to `len` bytes of encoded image data.
 * - `detect_opts` and `classify_opts` may be null (use defaults).
 */
struct SparrowEnginePipelineResult *sparrow_engine_run_pipeline(const SparrowEngine *engine,
                                                                const char *pipeline_id,
                                                                const uint8_t *image,
                                                                uintptr_t len,
                                                                const struct SparrowEngineDetectOpts *detect_opts,
                                                                const struct SparrowEngineClassifyOpts *classify_opts);
/**
 * Run audio detection on a WAV file. Returns null on error.
 *
 * # Safety
 * - `model` must be a valid model pointer (audio model with mel spectrogram preprocessing).
 * - `audio_path` must be a valid, non-null, null-terminated UTF-8 path to a WAV file.
 * - `opts` may be null (use defaults).
 */
struct SparrowEngineAudioResult *sparrow_engine_detect_audio(const SparrowEngineModel *model,
                                                             const char *audio_path,
                                                             const struct SparrowEngineAudioDetectOpts *opts);
/**
 * Free a `SparrowEngineAudioResult` returned by `sparrow_engine_detect_audio`.
 *
 * # Safety
 * `ptr` must be a pointer returned by `sparrow_engine_detect_audio`, or null.
 */
void sparrow_engine_audio_result_free(struct SparrowEngineAudioResult *ptr);
/**
 * Free a `SparrowEngineDetections` returned by `sparrow_engine_detect` or `sparrow_engine_detect_raw`.
 *
 * # Safety
 * `ptr` must be a pointer returned by `sparrow_engine_detect`/`sparrow_engine_detect_raw`, or null.
 */
void sparrow_engine_detections_free(struct SparrowEngineDetections *ptr);
/**
 * Free a `SparrowEngineClassifyResult` returned by `sparrow_engine_classify`.
 *
 * # Safety
 * `ptr` must be a pointer returned by `sparrow_engine_classify`, or null.
 */
void sparrow_engine_classify_result_free(struct SparrowEngineClassifyResult *ptr);
/**
 * Free a `SparrowEnginePipelineResult` returned by `sparrow_engine_run_pipeline`.
 *
 * # Safety
 * `ptr` must be a pointer returned by `sparrow_engine_run_pipeline`, or null.
 */
void sparrow_engine_pipeline_result_free(struct SparrowEnginePipelineResult *ptr);
/**
 * Free a string returned by `sparrow_engine_list_models` or `sparrow_engine_health`.
 *
 * # Safety
 * `ptr` must be a pointer returned by a sparrow-engine function that allocates strings, or null.
 */
void sparrow_engine_free_string(char *ptr);
/**
 * List loaded models as a JSON string. Returns null on error.
 * Caller must free with `sparrow_engine_free_string`.
 *
 * # Safety
 * `engine` must be a valid engine pointer.
 */
char *sparrow_engine_list_models(const SparrowEngine *engine);
/**
 * Return engine health as a JSON string. Returns null on error.
 * Caller must free with `sparrow_engine_free_string`.
 *
 * # Safety
 * `engine` must be a valid engine pointer.
 */
char *sparrow_engine_health(const SparrowEngine *engine);