sparrow-engine/tests/csharp_ffi_test/NativeMethods.g.cs

// <auto-generated>
// This code is generated by csbindgen.
// DON'T CHANGE THIS DIRECTLY.
// </auto-generated>
#pragma warning disable CS8500
#pragma warning disable CS8981
using System;
using System.Runtime.InteropServices;


namespace SparrowEngine.Native
{
    internal static unsafe partial class NativeMethods
    {
        const string __DllName = "sparrow_engine";





        /// <summary>
        ///  Create a new engine from a JSON config string. Returns null on error.
        ///
        ///  # Safety
        ///  `config_json` must be a valid, non-null, null-terminated UTF-8 string.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_new", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void* sparrow_engine_new(byte* config_json);

        /// <summary>
        ///  Free an engine. All models loaded through this engine become invalid.
        ///
        ///  # Safety
        ///  `engine` must be a pointer returned by `sparrow_engine_new`, or null (no-op).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void sparrow_engine_free(void* engine);

        /// <summary>
        ///  Load a model from a TOML manifest file path. Returns null on error.
        ///
        ///  # Safety
        ///  - `engine` must be a valid engine pointer.
        ///  - `manifest_path` must be a valid, non-null, null-terminated UTF-8 string.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_load_model", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void* sparrow_engine_load_model(void* engine, byte* manifest_path);

        /// <summary>
        ///  Load a model by its ID from the model directory. Returns null on error.
        ///
        ///  # Safety
        ///  - `engine` must be a valid engine pointer.
        ///  - `model_id` must be a valid, non-null, null-terminated UTF-8 string.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_load_model_by_id", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void* sparrow_engine_load_model_by_id(void* engine, byte* model_id);

        /// <summary>
        ///  Unload a model and free its resources.
        ///
        ///  # Safety
        ///  `model` must be a pointer returned by `sparrow_engine_load_model` / `sparrow_engine_load_model_by_id`, or null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_unload_model", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void sparrow_engine_unload_model(void* model);

        /// <summary>
        ///  Load a pipeline from a TOML manifest. Returns 0 on success, -1 on error.
        ///
        ///  # Safety
        ///  - `engine` must be a valid engine pointer.
        ///  - `manifest_path` must be a valid, non-null, null-terminated UTF-8 string.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_load_pipeline", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int sparrow_engine_load_pipeline(void* engine, byte* manifest_path);

        /// <summary>
        ///  Load a pipeline by its ID from the model directory. Returns 0 on success, -1 on error.
        ///
        ///  # Safety
        ///  - `engine` must be a valid engine pointer.
        ///  - `pipeline_id` must be a valid, non-null, null-terminated UTF-8 string.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_load_pipeline_by_id", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int sparrow_engine_load_pipeline_by_id(void* engine, byte* pipeline_id);

        /// <summary>
        ///  Unload a pipeline by ID. Returns 0 on success, -1 on error.
        ///
        ///  # Safety
        ///  - `engine` must be a valid engine pointer.
        ///  - `pipeline_id` must be a valid, non-null, null-terminated UTF-8 string.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_unload_pipeline", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int sparrow_engine_unload_pipeline(void* engine, byte* pipeline_id);

        /// <summary>
        ///  Run detection on an encoded image buffer (JPEG/PNG). Returns null on error.
        ///
        ///  # Safety
        ///  - `model` must be a valid model pointer.
        ///  - `image` must point to `len` bytes of encoded image data.
        ///  - `opts` may be null (use defaults).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_detect", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern SparrowEngineDetections* sparrow_engine_detect(void* model, byte* image, nuint len, SparrowEngineDetectOpts* opts);

        /// <summary>
        ///  Run detection on a raw pixel buffer. Returns null on error.
        ///
        ///  # Safety
        ///  - `model` must be a valid model pointer.
        ///  - `pixels` must point to `h * stride` bytes of pixel data.
        ///  - `opts` may be null (use defaults).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_detect_raw", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern SparrowEngineDetections* sparrow_engine_detect_raw(void* model, byte* pixels, uint w, uint h, uint stride, SparrowEnginePixelFormat format, SparrowEngineDetectOpts* opts);

        /// <summary>
        ///  Run classification on an encoded image buffer (JPEG/PNG). Returns null on error.
        ///
        ///  # Safety
        ///  - `model` must be a valid model pointer.
        ///  - `image` must point to `len` bytes of encoded image data.
        ///  - `opts` may be null (use defaults).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_classify", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern SparrowEngineClassifyResult* sparrow_engine_classify(void* model, byte* image, nuint len, SparrowEngineClassifyOpts* opts);

        /// <summary>
        ///  Run a pipeline (detect → classify) on an encoded image. Returns null on error.
        ///
        ///  # Safety
        ///  - `engine` must be a valid engine pointer.
        ///  - `pipeline_id` must be a valid, non-null, null-terminated UTF-8 string.
        ///  - `image` must point to `len` bytes of encoded image data.
        ///  - `detect_opts` and `classify_opts` may be null (use defaults).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_run_pipeline", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern SparrowEnginePipelineResult* sparrow_engine_run_pipeline(void* engine, byte* pipeline_id, byte* image, nuint len, SparrowEngineDetectOpts* detect_opts, SparrowEngineClassifyOpts* classify_opts);

        /// <summary>
        ///  Run audio detection on a WAV file. Returns null on error.
        ///
        ///  # Safety
        ///  - `model` must be a valid model pointer (audio model with mel spectrogram preprocessing).
        ///  - `audio_path` must be a valid, non-null, null-terminated UTF-8 path to a WAV file.
        ///  - `opts` may be null (use defaults).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_detect_audio", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern SparrowEngineAudioResult* sparrow_engine_detect_audio(void* model, byte* audio_path, SparrowEngineAudioDetectOpts* opts);

        /// <summary>
        ///  Free a `SparrowEngineAudioResult` returned by `sparrow_engine_detect_audio`.
        ///
        ///  # Safety
        ///  `ptr` must be a pointer returned by `sparrow_engine_detect_audio`, or null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_audio_result_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void sparrow_engine_audio_result_free(SparrowEngineAudioResult* ptr);

        /// <summary>
        ///  Free a `SparrowEngineDetections` returned by `sparrow_engine_detect` or `sparrow_engine_detect_raw`.
        ///
        ///  # Safety
        ///  `ptr` must be a pointer returned by `sparrow_engine_detect`/`sparrow_engine_detect_raw`, or null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_detections_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void sparrow_engine_detections_free(SparrowEngineDetections* ptr);

        /// <summary>
        ///  Free a `SparrowEngineClassifyResult` returned by `sparrow_engine_classify`.
        ///
        ///  # Safety
        ///  `ptr` must be a pointer returned by `sparrow_engine_classify`, or null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_classify_result_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void sparrow_engine_classify_result_free(SparrowEngineClassifyResult* ptr);

        /// <summary>
        ///  Free a `SparrowEnginePipelineResult` returned by `sparrow_engine_run_pipeline`.
        ///
        ///  # Safety
        ///  `ptr` must be a pointer returned by `sparrow_engine_run_pipeline`, or null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_pipeline_result_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void sparrow_engine_pipeline_result_free(SparrowEnginePipelineResult* ptr);

        /// <summary>
        ///  Free a string returned by `sparrow_engine_list_models` or `sparrow_engine_health`.
        ///
        ///  # Safety
        ///  `ptr` must be a pointer returned by a sparrow_engine function that allocates strings, or null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_free_string", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void sparrow_engine_free_string(byte* ptr);

        /// <summary>
        ///  List loaded models as a JSON string. Returns null on error.
        ///  Caller must free with `sparrow_engine_free_string`.
        ///
        ///  # Safety
        ///  `engine` must be a valid engine pointer.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_list_models", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* sparrow_engine_list_models(void* engine);

        /// <summary>
        ///  Return engine health as a JSON string. Returns null on error.
        ///  Caller must free with `sparrow_engine_free_string`.
        ///
        ///  # Safety
        ///  `engine` must be a valid engine pointer.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "sparrow_engine_health", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* sparrow_engine_health(void* engine);
